--- a/quaiAntique/src/app/horaires/horaires.list.ts/horaires.component.scss
+++ b/quaiAntique/src/app/horaires/horaires.list.ts/horaires.component.scss
@@ -1,5 +1,7 @@
-:host {
-  display: block;
+.horaires {
   margin: 1rem auto;
   text-align: center;
+  font-size: small;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  line-height: normal;
 }
