--- a/quaiAntique/src/app/auth/login/login.component.html
+++ b/quaiAntique/src/app/auth/login/login.component.html
@@ -9,6 +9,8 @@
       <input type="password" name="password" ngModel matInput placeholder="Password" #passwordInput="ngModel" required>
       <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">Login</button>
+    <div class="button_centered">
+    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading" [disabled]="!loginForm.valid">Login</button>
+    </div>
   </form>
 </mat-card>
