--- a/quaiAntique/src/app/header/header.component.scss
+++ b/quaiAntique/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-
 ul {
   list-style: none;
   padding: 0;
@@ -7,13 +6,42 @@ ul {
 
 a {
   text-decoration: none;
-  color: white;
+  color: bisque;
 }
 
 ul {
   display: flex;
+  align-items: center;
 }
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.mat-icon {
+  display: block;
+
+  color: white;
+  &:hover {
+    color: bisque;
+  }
+}
+
+.mat-toolbar {
+  background-color: #a47551;
+}
+.menu-panel {
+  background-color: #a47551;
+}
+.mat-menu-item {
+  background-color: #a47551;
+}
+.mat-card {
+  background-color: #a47551;
+}
+::ng-deep .mat-menu-content {
+  background-color: #a47551;
+}
+.button_icon {
+  padding: 0 1rem;
 }
