--- a/quaiAntique/src/app/auth/update/updateUser.component.html
+++ b/quaiAntique/src/app/auth/update/updateUser.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div>
     <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-      <table class="example-full-width" cellspacing="0">
+      <table cellspacing="0">
         <tr>
-          <td>{{ currentUser?.email }}</td>
+          <td>email : {{ currentUser?.email }}</td>
         </tr>
         <tr>
           <td>
