--- a/quaiAntique/src/app/home/home.component.html
+++ b/quaiAntique/src/app/home/home.component.html
@@ -1,1 +1,74 @@
+<div class="presentation">
+  <h1>Bienvenue à Quai Antique</h1>
+
+  <span class="content"
+    >Restaurant de fondues savoyardes et bourguignonnes</span
+  >
+</div>
+<div class="title">
+  <div class="separator"></div>
+  <h4>Le restaurant</h4>
+  <div class="separator"></div>
+</div>
+<div class="container">
+  <div class="element element--white">
+    <p>
+      Quai Antique est un restaurant alpin, dont le chef est Arnaud Michant,
+      finaliste de top Raclette, et gagnant de la meilleure fondue au 3
+      fromages.<br /><br />
+      Nous sommes situés Au 12 rue de Cluny à Chambery. Nous attendons vos
+      reservations..
+      <br />
+    </p>
+  </div>
+  <br />
+</div>
+
+<br />
+
+<div class="container">
+  <div class="element element-2"></div>
+  <div class="element element-1"></div>
+</div>
+
+<div class="title">
+  <div class="separator"></div>
+  <h4>les recettes selectionnés</h4>
+  <div class="separator"></div>
+</div>
+<app-galleryList></app-galleryList>
+<div class="title">
+  <div class="separator"></div>
+  <h4>nos menus</h4>
+  <div class="separator"></div>
+</div>
+<div class="container">
+  <div class="element element_menu">
+    <span>
+      <h4>le midi:</h4>
+      Entrée - plat - dessert : 19 euros
+      <br />
+      <h4>le soir:</h4>
+
+      Entrée - Raclette - dessert : 29 euros
+      <br />
+      Entrée - Raclette Royale (avec charcuterie) - dessert : 39 euros
+      <br />
+    </span>
+  </div>
+</div>
+<div class="title">
+  <div class="separator"></div>
+  <h4>nos horaires</h4>
+  <div class="separator"></div>
+</div>
+
 <app-horaires></app-horaires>
+
+<div class="footer">
+  <div class="colonne colonne-1">design/code : Renaud BAZIN</div>
+  <div class="colonne">
+    N'hesitez pas a contacter le restaurant <br />
+    restaurant@QuaiAntique.com
+  </div>
+</div>
