--- a/quaiAntique/src/app/horaires/horairesList/horaires.component.scss
+++ b/quaiAntique/src/app/horaires/horairesList/horaires.component.scss
@@ -1,7 +1,8 @@
+@import "../../../styles/variables.scss";
 .horaires {
   margin: 1rem auto;
   text-align: center;
   font-size: small;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: $police-tertiary;
   line-height: normal;
 }
