--- a/quaiAntique/src/app/auth/login/login.component.scss
+++ b/quaiAntique/src/app/auth/login/login.component.scss
@@ -1,8 +1,8 @@
 mat-card {
   display: block;
-  width: 40%;
+  width: 80vw;
   margin: auto;
-  margin: 2rem auto ;
+  margin: 2rem auto;
   padding: 1.5rem 0px;
 }
 
@@ -13,8 +13,6 @@ mat-form-field {
   min-width: 150px;
   max-width: 500px;
 }
-
-
 
 mat-spinner {
   margin: auto;
@@ -28,5 +26,3 @@ mat-spinner {
   max-width: 500px;
   text-align: end;
 }
-
-
