--- a/quaiAntique/src/app/header/header.component.scss
+++ b/quaiAntique/src/app/header/header.component.scss
@@ -1,47 +1,88 @@
+@import "../../styles/variables.scss";
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-a {
+button {
   text-decoration: none;
-  color: bisque;
+  color: $color-primary;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    color: $color-primary-light;
+    transform: scale(1.2);
+    background-color: $color-white;
+  }
 }
 
 ul {
   display: flex;
+  width: 100%;
   align-items: center;
-}
-
-.spacer {
-  flex: 1 1 auto;
+  justify-content: flex-end;
 }
 
 .mat-icon {
   display: block;
-
-  color: white;
+  color: $color-secondary-dark;
+  transition: 0.5s ease;
   &:hover {
-    color: bisque;
+    color: $color-secondary-light;
+    transform: scale(1.2);
   }
 }
 
 .mat-toolbar {
-  background-color: #a47551;
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  padding-top: 30px;
+  flex-direction: column;
 }
-.menu-panel {
-  background-color: #a47551;
-}
-.mat-menu-item {
-  background-color: #a47551;
-}
-.mat-card {
-  background-color: #a47551;
-}
-::ng-deep .mat-menu-content {
-  background-color: #a47551;
-}
+
 .button_icon {
   padding: 0 1rem;
+}
+.logo {
+  margin-right: auto;
+  font-weight: 900;
+  font-size: xx-large;
+  text-align: center;
+  font-family: $police-secondary;
+  margin-left: 10rem;
+  transition: 0.5s ease;
+  @media (max-width: 50em) {
+    margin-left: 1rem;
+    transform: scale(0.7);
+  }
+
+  &--letter {
+    position: absolute;
+    left: 0;
+    top: -1.5rem;
+    transition: 0.5s ease;
+    &:hover {
+      left: -2rem;
+      transform: scale(1.2);
+      &::after {
+        content: "uai Antique";
+      }
+    }
+    &:not(:hover) {
+      &::after {
+        content: "A";
+        color: $color-primary-light;
+      }
+    }
+  }
+  .display {
+    display: relative;
+    height: 100px;
+  }
 }
