--- a/quaiAntique/src/app/reservation/reservationList/reservationList.component.html
+++ b/quaiAntique/src/app/reservation/reservationList/reservationList.component.html
@@ -1,5 +1,35 @@
-oh my god
-
-<pre>{{ reservationListAM | json }}</pre>
-<pre>{{ accumulUserAM | json }}</pre>
-<pre>{{ accumulUserPM | json }}</pre>
+<table mat-table [dataSource]="reservationListToday" class="mat-elevation-z8">
+  <ng-container matColumnDef="username">
+    <th mat-header-cell *matHeaderCellDef>Username</th>
+    <td mat-cell *matCellDef="let user">{{ user.userName | uppercase }}</td>
+  </ng-container>
+  <ng-container matColumnDef="day">
+    <th mat-header-cell *matHeaderCellDef>Day</th>
+    <td mat-cell *matCellDef="let reservation">
+      {{ reservation.day | date }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="hour">
+    <th mat-header-cell *matHeaderCellDef>Hour</th>
+    <td mat-cell *matCellDef="let reservation">
+      {{ reservation.hour | date : "HH:mm" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="totalGuests">
+    <th mat-header-cell *matHeaderCellDef>Nombres Personnes</th>
+    <td mat-cell *matCellDef="let reservation">
+      {{ reservation.totalGuests }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="allergies">
+    <th mat-header-cell *matHeaderCellDef>Allergies</th>
+    <td mat-cell *matCellDef="let reservation">
+      -
+      <span *ngFor="let allergy of reservation.allergies"
+        >{{ allergy }} -
+      </span>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
+</table>
