--- a/quaiAntique/src/app/auth/login/login.component.html
+++ b/quaiAntique/src/app/auth/login/login.component.html
@@ -29,7 +29,7 @@
         >Please enter a valid password.</mat-error
       >
     </mat-form-field>
-    <div class="button_centered">
+    <div class="button--centered">
       <button
         mat-raised-button
         color="accent"
