--- a/quaiAntique/src/app/gallery/galleryUpdate/galleryUpdate.component.html
+++ b/quaiAntique/src/app/gallery/galleryUpdate/galleryUpdate.component.html
@@ -60,7 +60,7 @@
   </mat-card-content>
 </mat-card>
 <mat-card>
-  <div class="gallery_table">
+  <div class="gallery__table">
     <div *ngFor="let gallery of updatedGallery; let i = index">
       <div
         class="row"
