--- a/quaiAntique/src/app/gallery/galleryUpdate/galleryUpdate.component.scss
+++ b/quaiAntique/src/app/gallery/galleryUpdate/galleryUpdate.component.scss
@@ -31,7 +31,7 @@ input[type="file"] {
   margin: 1.5rem;
 }
 
-.gallery_table {
+.gallery__table {
   min-width: 50rem;
   min-height: 50rem;
   display: flex;
