--- a/quaiAntique/src/app/home/home.component.html
+++ b/quaiAntique/src/app/home/home.component.html
@@ -27,8 +27,8 @@
 <br />
 
 <div class="container">
-  <div class="element element-2"></div>
-  <div class="element element-1"></div>
+  <div class="element element__2"></div>
+  <div class="element element__1"></div>
 </div>
 
 <div class="title">
@@ -43,7 +43,7 @@
   <div class="separator"></div>
 </div>
 <div class="container">
-  <div class="element element_menu">
+  <div class="element element__menu">
     <span>
       <h4>le midi:</h4>
       Entrée - plat - dessert : 19 euros
@@ -66,7 +66,7 @@
 <app-horaires></app-horaires>
 
 <div class="footer">
-  <div class="colonne colonne-1">design/code : Renaud BAZIN</div>
+  <div class="colonne colonne__1">design/code : Renaud BAZIN</div>
   <div class="colonne">
     N'hesitez pas a contacter le restaurant <br />
     restaurant@QuaiAntique.com
