--- a/quaiAntique/src/app/horaires/horairesList/horaires.component.html
+++ b/quaiAntique/src/app/horaires/horairesList/horaires.component.html
@@ -8,3 +8,18 @@
     <br />
   </li>
 </ul>
+
+<!-- <div class="design">
+  <div class="police--1">Cambria</div>
+  <div class="police--2">Petit Formal Script</div>
+  <div class="police--3">Franklin Gothic Medium</div>
+  <br />
+  <div class="separator separator--1">$color-primary</div>
+  <div class="separator separator--2">$color-primary-dark</div>
+  <div class="separator separator--3">$color-primary-light</div>
+  <div class="separator separator--4">$color-secondary-dark</div>
+  <div class="separator separator--5">$color-secondary-light</div>
+  <div class="separator separator--6">$color-grey-dark</div>
+  <div class="separator separator--7">$color-grey-light</div>
+  <div class="separator separator--8">$color-warn</div>
+</div> !-->
