--- a/quaiAntique/src/app/horaires/horairesUpdate/horairesUpdate.component.html
+++ b/quaiAntique/src/app/horaires/horairesUpdate/horairesUpdate.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="card_horaires">
+  <mat-card class="card__horaires">
     <mat-card-header>
       <mat-card-title>Mettez a jour les horaires</mat-card-title>
       <mat-card-subtitle
@@ -166,7 +166,7 @@
         </div>
         <div>
           <button
-            class="mat-button button--form"
+            class="mat-button button__form"
             color="danger"
             type="submit"
             [disabled]="
