--- a/quaiAntique/src/app/reservation/reservationUpdate/reservation.component.scss
+++ b/quaiAntique/src/app/reservation/reservationUpdate/reservation.component.scss
@@ -17,6 +17,6 @@ mat-dialog-content {
   top: -1.5rem;
   border: 1px solid black;
 }
-.form_reservation {
+.form__reservation {
   text-align: center;
 }
