--- a/quaiAntique/src/styles.scss
+++ b/quaiAntique/src/styles.scss
@@ -34,7 +34,7 @@ simple-snack-bar {
 button {
   border: 0;
 }
-.button--form {
+.button__form {
   background-color: $color-primary-light;
   transition: 0.3s ease-in-out;
   &:hover {
