--- a/quaiAntique/src/app/header/header.component.scss
+++ b/quaiAntique/src/app/header/header.component.scss
@@ -38,7 +38,6 @@ ul {
   background-size: 100%;
   border-radius: 3px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-
   height: 100px;
   display: flex;
   align-items: flex-start;
@@ -46,7 +45,7 @@ ul {
   flex-direction: column;
 }
 
-.button_icon {
+.button__icon {
   padding: 0 1rem;
 }
 .logo {
@@ -62,16 +61,26 @@ ul {
     transform: scale(0.7);
   }
 
-  &--letter {
+  &__letter {
     position: absolute;
     left: 0;
     top: -1.5rem;
     transition: 0.5s ease;
-    &:hover {
-      left: -2rem;
-      transform: scale(1.2);
-      &::after {
-        content: "uai Antique";
+    @media (min-width: 50em) {
+      &:hover {
+        left: -2rem;
+        transform: scale(1.2);
+        &::after {
+          content: "uai Antique";
+        }
+      }
+    }
+    @media (max-width: 50em) {
+      &:hover {
+        transform: scale(1.2);
+        &::after {
+          content: "A";
+        }
       }
     }
     &:not(:hover) {
