--- a/quaiAntique/src/app/home/home.component.scss
+++ b/quaiAntique/src/app/home/home.component.scss
@@ -13,7 +13,7 @@
   @media (max-width: 50em) {
     height: 200px;
   }
-  &_image {
+  &__image {
     display: block;
     background-color: $color-white;
     min-width: 300px;
@@ -65,7 +65,7 @@ h4 {
 .colonne {
   min-width: 10rem;
   padding: 1.5rem;
-  &-1 {
+  &__1 {
     border-right: solid 1px;
   }
 }
@@ -89,7 +89,7 @@ h4 {
   background-position: center;
   box-shadow: 20px -8px $color-secondary-dark;
   position: relative;
-  &_menu {
+  &__menu {
     min-width: 80vw;
     color: $color-white;
   }
@@ -125,7 +125,7 @@ h4 {
     }
   }
 
-  &-1 {
+  &__1 {
     border-radius: 0em;
     background-image: url(../../images/chef2.jpg);
 
@@ -153,7 +153,7 @@ h4 {
       top: -2.5rem;
     }
   }
-  &-2 {
+  &__2 {
     background-image: url(../../images/chef1.jpg);
     position: relative;
     border-radius: 0em;
